--- a/revenueassurance/requirements.txt
+++ b/revenueassurance/requirements.txt
@@ -57,6 +57,7 @@ executing==1.2.0
 fastjsonschema==2.19.1
 filelock==3.13.4
 flake8==7.0.0
+Flask==3.0.3
 flatbuffers==24.3.25
 fonttools==4.51.0
 fqdn==1.5.1
