--- a/revenueassurance/requirements.txt
+++ b/revenueassurance/requirements.txt
@@ -1,287 +1,292 @@
-absl-py==2.1.0
-aiofiles==22.1.0
-aiohttp==3.9.5
-aiohttp-cors==0.7.0
-aiosignal==1.3.1
-aiosqlite==0.20.0
-anyio==4.3.0
-appengine-python-standard==1.1.6
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astroid==3.1.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.2.0
-autopep8==2.0.4
-Babel==2.14.0
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-black==24.4.0
-bleach==6.1.0
-blessed==1.20.0
-bokeh==3.4.1
-boto3==1.34.89
-botocore==1.34.89
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-codeflare-sdk==0.16.0
-codeflare-torchx==0.6.0.dev2
-colorama==0.4.6
-coloredlogs==15.0.1
-colorful==0.5.6
-comm==0.2.2
-commonmark==0.9.1
-contourpy==1.2.1
-cryptography==40.0.2
-cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-deprecation==2.1.0
-dill==0.3.8
-distlib==0.3.8
-dnspython==2.6.1
-docker==7.0.0
-docstring-to-markdown==0.15
-docstring_parser==0.8.1
-entrypoints==0.4
-exceptiongroup==1.2.1
-executing==1.2.0
-fastjsonschema==2.19.1
-filelock==3.13.4
-flake8==7.0.0
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.51.0
-fqdn==1.5.1
-frozendict==2.4.2
-frozenlist==1.4.1
-fsspec==2024.3.1
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.18.0
-google-auth==2.29.0
-google-auth-oauthlib==1.2.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.16.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-gpustat==1.1.1
-grpcio==1.62.2
-h5py==3.11.0
-humanfriendly==10.0
-idna==3.7
-imbalanced-learn==0.12.2
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-ipykernel==6.29.4
-ipython==8.18.1
-ipython-genutils==0.2.0
-ipywidgets==8.1.2
-isoduration==20.11.0
-isort==5.13.2
-jedi==0.19.1
-Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.4.0
-json5==0.9.25
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter-bokeh==3.0.7
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter-resource-usage==0.7.2
-jupyter-server-mathjax==0.2.6
-jupyter-ydoc==0.2.5
-jupyter_client==7.4.9
-jupyter_core==5.7.2
-jupyter_packaging==0.12.3
-jupyter_server==2.13.0
-jupyter_server_fileid==0.9.2
-jupyter_server_proxy==4.0.0
-jupyter_server_terminals==0.5.3
-jupyter_server_ydoc==0.8.0
-jupyterlab==3.6.7
-jupyterlab-lsp==4.2.0
-jupyterlab_git==0.44.0
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.1
-jupyterlab_widgets==3.0.10
-kafka-python==2.0.2
-keras==2.15.0
-kfp==2.5.0
-kfp-kubernetes==1.0.0
-kfp-pipeline-spec==0.2.2
-kfp-server-api==2.0.5
-kiwisolver==1.4.5
-kubernetes==26.1.0
-libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdurl==0.1.2
-micropipenv==1.6.0
-minio==7.2.5
-mistune==3.0.2
-ml-dtypes==0.3.2
-mock==5.1.0
-mpmath==1.3.0
-msgpack==1.0.8
-multidict==6.0.5
-mypy-extensions==1.0.0
-mysql-connector-python==8.3.0
-namex==0.0.8
-nbclassic==1.0.0
-nbclient==0.10.0
-nbconvert==7.16.3
-nbdime==3.2.1
-nbformat==5.10.4
-nbgitpuller==1.2.1
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==6.5.6
-notebook_shim==0.2.4
-numpy==1.26.4
-nvidia-ml-py==12.535.133
-oauthlib==3.2.2
-odh-elyra==3.16.5
-onnx==1.16.0
-onnxconverter-common==1.13.0
-onnxruntime==1.16.0
-opencensus==0.11.4
-opencensus-context==0.1.3
-openshift-client==1.0.18
-opt-einsum==3.3.0
-optree==0.11.0
-overrides==7.7.0
-packaging==24.0
-pandas==2.2.2
-pandocfilters==1.5.1
-papermill==2.5.0
-paramiko==3.4.0
-parso==0.8.4
-pathspec==0.12.1
-pexpect==4.9.0
-pillow==10.3.0
-platformdirs==3.11.0
-plotly==5.20.0
-pluggy==1.5.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-proto-plus==1.23.0
-protobuf==3.20.3
-psutil==5.9.8
-psycopg==3.1.18
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py-spy==0.3.14
-pyarrow==16.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycodestyle==2.11.1
-pycparser==2.22
-pycryptodome==3.20.0
-pydantic==1.10.15
-pydocstyle==6.3.0
-pyflakes==3.2.0
-PyGithub==2.3.0
-Pygments==2.17.2
-PyJWT==2.8.0
-pylint==3.1.0
-pymongo==4.6.3
-PyNaCl==1.5.0
-pyodbc==5.1.0
-pyparsing==3.1.2
-pyre-extensions==0.0.30
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-python-lsp-jsonrpc==1.1.2
-python-lsp-server==1.11.0
-pytoolconfig==1.3.1
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==24.0.1
-ray==2.7.0
-referencing==0.34.0
-requests==2.31.0
-requests-oauthlib==2.0.0
-requests-toolbelt==0.10.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==12.6.0
-rope==1.13.0
-rpds-py==0.18.0
-rsa==4.9
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
-s3transfer==0.10.1
-scikit-learn==1.4.2
-scipy==1.12.0
-seaborn==0.13.2
-Send2Trash==1.8.3
-simpervisor==1.0.0
-six==1.16.0
-skl2onnx==1.16.0
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.1
-snowballstemmer==2.2.0
-soupsieve==2.5
-stack-data==0.6.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
-tensorflow==2.15.1
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.36.0
-termcolor==2.3.0
-terminado==0.18.1
-tf2onnx==1.16.1
-threadpoolctl==3.4.0
-tinycss2==1.3.0
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.12.4
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20240316
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-tzdata==2024.1
-ujson==5.9.0
-uri-template==1.3.0
-urllib3==1.26.18
-virtualenv==20.21.0
-watchdog==4.0.0
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==3.0.2
-whatthepatch==1.0.5
-widgetsnbextension==4.0.10
-wrapt==1.14.1
-xyzservices==2024.4.0
-y-py==0.6.2
-yapf==0.40.2
-yarl==1.9.4
-yaspin==3.0.2
-ypy-websocket==0.8.4
-zipp==3.18.1
+absl-py
+aiofiles
+aiohttp
+aiohttp-cors
+aiosignal
+aiosqlite
+anyio
+appengine-python-standard
+appnope
+argon2-cffi
+argon2-cffi-bindings
+arrow
+astroid
+asttokens
+astunparse
+async-timeout
+attrs
+autopep8
+Babel
+bcrypt
+beautifulsoup4
+black
+bleach
+blessed
+bokeh
+boto3
+botocore
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+codeflare-sdk
+codeflare-torchx
+colorama
+coloredlogs
+colorful
+comm
+commonmark
+contourpy
+cryptography
+cycler
+debugpy
+decorator
+defusedxml
+Deprecated
+deprecation
+dill
+distlib
+dnspython
+docker
+docstring-to-markdown
+docstring_parser
+entrypoints
+exceptiongroup
+executing
+fastjsonschema
+filelock
+flake8
+Flask
+flatbuffers
+fonttools
+fqdn
+frozendict
+frozenlist
+fsspec
+gast
+gitdb
+GitPython
+google-api-core
+google-auth
+google-auth-oauthlib
+google-cloud-core
+google-cloud-storage
+google-crc32c
+google-pasta
+google-resumable-media
+googleapis-common-protos
+gpustat
+grpcio
+h5py
+humanfriendly
+idna
+imbalanced-learn
+importlib_metadata
+importlib_resources
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+isoduration
+isort
+jedi
+Jinja2
+jmespath
+joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
+jupyter-bokeh
+jupyter-events
+jupyter-lsp
+jupyter-resource-usage
+jupyter-server-mathjax
+jupyter-ydoc
+jupyter_client
+jupyter_core
+jupyter_packaging
+jupyter_server
+jupyter_server_fileid
+jupyter_server_proxy
+jupyter_server_terminals
+jupyter_server_ydoc
+jupyterlab
+jupyterlab-lsp
+jupyterlab_git
+jupyterlab_pygments
+jupyterlab_server
+jupyterlab_widgets
+kafka-python
+keras
+kfp
+kfp-kubernetes
+kfp-pipeline-spec
+kfp-server-api
+kiwisolver
+kubernetes
+libclang
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mccabe
+mdurl
+micropipenv
+minio
+mistune
+ml-dtypes
+mock
+mpmath
+msgpack
+multidict
+mypy-extensions
+mysql-connector-python
+namex
+nbclassic
+nbclient
+nbconvert
+nbdime
+nbformat
+nbgitpuller
+nest-asyncio
+networkx
+notebook
+notebook_shim
+nvidia-ml-py
+oauthlib
+odh-elyra
+onnx
+onnxconverter-common
+onnxruntime
+opencensus
+opencensus-context
+openshift-client
+opt-einsum
+optree
+overrides
+packaging
+pandocfilters
+papermill
+paramiko
+parso
+pathspec
+pexpect
+pillow
+platformdirs
+plotly
+pluggy
+prometheus_client
+prompt-toolkit
+proto-plus
+protobuf
+psutil
+psycopg
+ptyprocess
+pure-eval
+py-spy
+pyarrow
+pyasn1
+pyasn1_modules
+pycodestyle
+pycparser
+pycryptodome
+pydantic
+pydocstyle
+pyflakes
+PyGithub
+Pygments
+PyJWT
+pylint
+pymongo
+PyNaCl
+pyodbc
+pyparsing
+pyre-extensions
+python-dateutil
+python-json-logger
+python-lsp-jsonrpc
+python-lsp-server
+pytoolconfig
+pytz
+PyYAML
+pyzmq
+ray
+referencing
+requests
+requests-oauthlib
+requests-toolbelt
+rfc3339-validator
+rfc3986-validator
+rich
+rope
+rpds-py
+rsa
+ruamel.yaml
+ruamel.yaml.clib
+s3transfer
+scipy
+seaborn
+Send2Trash
+simpervisor
+six
+skl2onnx
+smart-open
+smmap
+sniffio
+snowballstemmer
+soupsieve
+stack-data
+sympy
+tabulate
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-io-gcs-filesystem
+termcolor
+terminado
+tf2onnx
+threadpoolctl
+tinycss2
+toml
+tomli
+tomlkit
+tornado
+tqdm
+traitlets
+types-python-dateutil
+typing-inspect
+typing_extensions
+tzdata
+ujson
+uri-template
+urllib3
+virtualenv
+watchdog
+wcwidth
+webcolors
+webencodings
+websocket-client
+Werkzeug
+whatthepatch
+widgetsnbextension
+wrapt
+xyzservices
+y-py
+yapf
+yarl
+yaspin
+ypy-websocket
+zipp
+transformers
+datasets
+accelerate
+torch
+scikit-learn
+pandas
+numpy
+peft
