--- a/revenueassurance/03-BertTest.yaml
+++ b/revenueassurance/03-BertTest.yaml
@@ -9,7 +9,7 @@ fenar@macpro71 etc-ai-wrx % curl -X POST http://localhost:5000/predict \
         "Plan_Type": "postpaid",
         "Cost": 5000,
         "Cellular_Location_Distance": 5000,
-        "Personal_Pin_Used": 0,
+        "Last_Time_Pin_Used": 0,
         "Avg_Call_Duration": 200,
         "Avg_Data_Usage": 8000,
         "Avg_Cost": 3000,
@@ -29,7 +29,7 @@ fenar@macpro71 etc-ai-wrx % curl -X POST http://localhost:5000/predict \
         "Plan_Type": "prepaid",
         "Cost": 5,
         "Cellular_Location_Distance": 1,
-        "Personal_Pin_Used": 1,
+        "Last_Time_Pin_Used": 1,
         "Avg_Call_Duration": 1,
         "Avg_Data_Usage": 45,
         "Avg_Cost": 4,
