--- a/revenueassurance/requirements.txt
+++ b/revenueassurance/requirements.txt
@@ -1,293 +1,11 @@
-absl-py
-aiofiles
-aiohttp
-aiohttp-cors
-aiosignal
-aiosqlite
-anyio
-appengine-python-standard
-appnope
-argon2-cffi
-argon2-cffi-bindings
-arrow
-astroid
-asttokens
-astunparse
-async-timeout
-attrs
-autopep8
-Babel
-bcrypt
-beautifulsoup4
-black
-bleach
-blessed
-bokeh
-boto3
-botocore
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-codeflare-sdk
-codeflare-torchx
-colorama
-coloredlogs
-colorful
-comm
-commonmark
-contourpy
-cryptography
-cycler
-debugpy
-decorator
-defusedxml
-Deprecated
-deprecation
-dill
-distlib
-dnspython
-docker
-docstring-to-markdown
-docstring_parser
-entrypoints
-exceptiongroup
-executing
-fastjsonschema
-filelock
-flake8
-Flask
-flatbuffers
-fonttools
-fqdn
-frozendict
-frozenlist
-fsspec
-gast
-gitdb
-GitPython
-google-api-core
-google-auth
-google-auth-oauthlib
-google-cloud-core
-google-cloud-storage
-google-crc32c
-google-pasta
-google-resumable-media
-googleapis-common-protos
-gpustat
-grpcio
-h5py
-humanfriendly
-idna
-imbalanced-learn
-importlib_metadata
-importlib_resources
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-isoduration
-isort
-jedi
-Jinja2
-jmespath
-joblib
-json5
-jsonpointer
-jsonschema
-jsonschema-specifications
-jupyter-bokeh
-jupyter-events
-jupyter-lsp
-jupyter-resource-usage
-jupyter-server-mathjax
-jupyter-ydoc
-jupyter_client
-jupyter_core
-jupyter_packaging
-jupyter_server
-jupyter_server_fileid
-jupyter_server_proxy
-jupyter_server_terminals
-jupyter_server_ydoc
-jupyterlab
-jupyterlab-lsp
-jupyterlab_git
-jupyterlab_pygments
-jupyterlab_server
-jupyterlab_widgets
-kafka-python
-keras
-kfp
-kfp-kubernetes
-kfp-pipeline-spec
-kfp-server-api
-kiwisolver
-kubernetes
-libclang
-Markdown
-markdown-it-py
-MarkupSafe
-matplotlib
-matplotlib-inline
-mccabe
-mdurl
-micropipenv
-minio
-mistune
-ml-dtypes
-mock
-mpmath
-msgpack
-multidict
-mypy-extensions
-mysql-connector-python
-namex
-nbclassic
-nbclient
-nbconvert
-nbdime
-nbformat
-nbgitpuller
-nest-asyncio
-networkx
-notebook
-notebook_shim
-nvidia-ml-py
-oauthlib
-odh-elyra
-onnx
-onnxconverter-common
-onnxruntime
-opencensus
-opencensus-context
-openshift-client
-opt-einsum
-optree
-overrides
-packaging
-pandocfilters
-papermill
-paramiko
-parso
-pathspec
-pexpect
-pillow
-platformdirs
-plotly
-pluggy
-prometheus_client
-prompt-toolkit
-proto-plus
-protobuf
-psutil
-psycopg
-ptyprocess
-pure-eval
-py-spy
-pyarrow
-pyasn1
-pyasn1_modules
-pycodestyle
-pycparser
-pycryptodome
-pydantic
-pydocstyle
-pyflakes
-PyGithub
-Pygments
-PyJWT
-pylint
-pymongo
-PyNaCl
-pyodbc
-pyparsing
-pyre-extensions
-python-dateutil
-python-json-logger
-python-lsp-jsonrpc
-python-lsp-server
-pytoolconfig
-pytz
-PyYAML
-pyzmq
-ray
-referencing
-requests
-requests-oauthlib
-requests-toolbelt
-rfc3339-validator
-rfc3986-validator
-rich
-rope
-rpds-py
-rsa
-ruamel.yaml
-ruamel.yaml.clib
-s3transfer
-scipy
-seaborn
-Send2Trash
-simpervisor
-six
-skl2onnx
-smart-open
-smmap
-sniffio
-snowballstemmer
-soupsieve
-stack-data
-sympy
-tabulate
-tenacity
-tensorboard
-tensorboard-data-server
-tensorflow
-tensorflow-estimator
-tensorflow-io-gcs-filesystem
-termcolor
-terminado
-tf2onnx
-threadpoolctl
-tinycss2
-toml
-tomli
-tomlkit
-tornado
-tqdm
-traitlets
-types-python-dateutil
-typing-inspect
-typing_extensions
-tzdata
-ujson
-uri-template
-urllib3
-virtualenv
-watchdog
-wcwidth
-webcolors
-webencodings
-websocket-client
-Werkzeug
-whatthepatch
-widgetsnbextension
-wrapt
-xyzservices
-y-py
-yapf
-yarl
-yaspin
-ypy-websocket
-zipp
-transformers
-datasets
-accelerate
-torch
-scikit-learn
-pandas
 numpy
-peft
-bitsandbytes
+pandas
+matplotlib
+tensorflow
+scikit-learn
+onnx 
+tf2onnx 
+torch
+transformers
+accelerate
+python-dotenv
