--- a/revenueassurance/pipeline/tekton/pipeline.yaml
+++ b/revenueassurance/pipeline/tekton/pipeline.yaml
@@ -9,6 +9,9 @@ spec:
       description: Repo URL
       name: GIT_URL
       type: string
+    - default: 'main'
+      name: GIT_REVISION
+      type: string
     - default: 3.11-ubi9
       name: PYTHON_IMAGE
       type: string
