--- a/revenueassurance/pipeline/tekton/pipeline.yaml
+++ b/revenueassurance/pipeline/tekton/pipeline.yaml
@@ -15,7 +15,7 @@ spec:
     - default: 3.11-ubi9
       name: PYTHON_IMAGE
       type: string
-    - default: 'https://ds-pipeline-dspa.tme-aix.svc.cluster.local:8443'
+    - default: 'http://ds-pipeline-dspa.tme-aix.svc.cluster.local:8888'
       name: KUBEFLOW_ENDPOINT
       type: string
     - default: 'http://minio.tme-aix.svc.cluster.local:9000'
@@ -122,7 +122,7 @@ spec:
         - name: CONTEXT
           value: .
         - name: TLSVERIFY
-          value: 'false'
+          value: 'true'
         - name: FORMAT
           value: oci
         - name: BUILD_EXTRA_ARGS
