--- a/revenueassurance/pipeline/tekton/pipeline.yaml
+++ b/revenueassurance/pipeline/tekton/pipeline.yaml
@@ -119,7 +119,7 @@ spec:
         - name: CONTEXT
           value: .
         - name: TLSVERIFY
-          value: 'true'
+          value: 'false'
         - name: FORMAT
           value: oci
         - name: BUILD_EXTRA_ARGS
