--- a/revenueassurance/pipeline/tekton/pipeline.yaml
+++ b/revenueassurance/pipeline/tekton/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
     - default: 'https://ds-pipeline-dspa.tme-aix.svc.cluster.local:8443'
       name: KUBEFLOW_ENDPOINT
       type: string
-    - default: 'http://ds-pipeline-dspa.tme-aix.svc.cluster.local:9000'
+    - default: 'http://minio.tme-aix.svc.cluster.local:9000'
       name: S3_ENDPOINT
       type: string
     - default: T09QInleq4mA_Z4P
