--- a/5gprod/requirements.txt
+++ b/5gprod/requirements.txt
@@ -1,5 +1,4 @@
 pandas
-os
 numpy
 scikit-learn
 python-dotenv
@@ -7,3 +6,5 @@ langchain
 langchain_openai
 langchain_community
 faiss-cpu
+openai
+seaborn
